--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,13 @@
 {
   "manifest_version": 3,
   "name": "Limitr",
-  "version": "1.0.0",
-  "description": "Audio compressor, limiter, and normalizer for streaming sites",
+  "version": "1.1.0",
+  "description": "Audio compressor, limiter, and normalizer for any browser tab",
   "permissions": [
     "storage",
-    "activeTab",
-    "scripting"
-  ],
-  "host_permissions": [
-    "<all_urls>"
+    "tabCapture",
+    "offscreen",
+    "tabs"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -28,12 +26,5 @@
   },
   "background": {
     "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
-    }
-  ]
+  }
 }
