--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,11 @@
     "storage",
     "tabCapture",
     "offscreen",
-    "tabs"
+    "tabs",
+    "scripting"
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ],
   "action": {
     "default_popup": "popup.html",
