--- a/manifest.json
+++ b/manifest.json
@@ -32,5 +32,17 @@
   },
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "lib/noise-suppressor-worklet.js",
+        "lib/rnnoise.wasm"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
