Add test audio fixtures and implement preset level calculator
- Created a README.md file in tests/fixtures/ to document the generation of test audio files for the Limitr debug harness.
- Added commands for generating various audio test files including speech, mixed audio, silence, and a synthetic test tone.
- Introduced a new script tests/preset-levels.js that simulates the audio processing chain for all presets.
- Implemented core functions for compression, AGC, limiting, and processing input levels through the preset chain.
- Added diagnostics for checking dynamic inversions, loudness ranking, dynamic range, clipping risk, and compression summary.

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "tabCapture",
     "offscreen",
     "tabs",
-    "scripting"
+    "scripting",
+    "contextMenus"
   ],
   "host_permissions": [
     "<all_urls>"
